# music-taste-recommender

./: .coveragerc  .gitignore  pyproject.toml  readme.md  requirements.txt
app/: app_config.py  app_utils.py  main.py
app/components/: metrics_display.py  recommendations_table.py  track_selector.py
config/: __init__.py  business_config.py  config_loader.py  genre_mapping.py  settings.yaml
data/embeddings/: metadata.pkl.dvc  scaler.pkl.dvc  track_embeddings.npy.dvc  track_ids.npy.dvc
data/evaluation_results/: aggressive_results.csv.dvc  balanced_results.csv.dvc  conservative_results.csv.dvc  discovery_results.csv.dvc  retention_results.csv.dvc  strategies_comparison.csv.dvc
data/processed/: spotify_clean_balanced.csv.dvc
data/raw/: music_data.csv.dvc
docs/: architecture.md
entrypoint/: generate_embeddings.py  process_dataset.py  test_recommender.py
notebooks/: 01_data_exploration.ipynb  02_audio_features_analysis.ipynb  03_evaluate_strategies.ipynb
src/: business_metrics.py  data_processing.py  embeddings.py  recommender.py  user_simulator.py  utils.py
tests/: test_business_metrics.py  test_config.py  test_data_processing.py
utils/: __init__.py  download_embeddings.py  logger.py
