[project]
name = "music-taste-recommender"
version = "0.1.0"
description = "Business-driven music recommendation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.53.1",
    "tqdm>=4.67.1",
]
